# Multilingual-CLIP

./: README.md  setup.cfg
