[metadata]
name = MultiClip
version = 0.0.0.1
description = "Multilingual Clip"
url='https://github.com/mustass/Multilingual-CLIP'

[options]
packages = find:
package_dir =
    = multiclip
scripts =
    multiclip/multilingual_clip.py

[options.packages.find]
where = multiclip

install_requires =
    ftfy
    regex
    tqdm
    requests
    importlib; python_version == "2.6"
    git+https://github.com/openai/CLIP.git
